tests/good/tc5300-embedded_voice.vtt
WEBVTT

00:11.000 --> 00:13.000
<v Roger Bingham>We are in <v Roger Bingham>New York</v> City</v>