tests/bad/tc5311-ruby_optional_line_terminator_rt_omitted.vtt
WEBVTT

00:11.000 --> 00:13.000
Hey <ruby>WWW<rt>World Wide Web
</ruby>